# CsoundJNI

./: .gitignore  CMakeLists.txt  README.md  fix_macos_rpath.sh  generate_headers.sh  pom.xml
.github/workflows/: build.yml
cmake/Modules/: FindCsound.cmake
src/: CsoundJNI.cpp  JCsound.cpp  JCsound.java  com_kunstmusik_jcsound_JCsound.h
src/main/cpp/: CsoundJNI.cpp  com_kunstmusik_csoundjni_CsoundJNI.h
src/main/java/com/kunstmusik/csoundjni/: ControlChannelType.java  Csound.java  CsoundJNI.java  MessageCallback.java  NativeUtils.java
src/main/resources/com/kunstmusik/csoundjni/native/: libcsoundjni.dylib  libcsoundjni.jnilib
src/main/resources/com/kunstmusik/csoundjni/native/aarch64/: libcsoundjni.jnilib
